Messages Container no longer cause game wrapper to overflow, User options are now saved with localstorage, and added loading animation to button.

--- a/client/css/main.css
+++ b/client/css/main.css
@@ -230,9 +230,7 @@ button {
     transition: opacity 0.15s ease, transform 0.15s ease;
 }
 
-.hide {
-    display: none;
-}
+
 .title {
     .a {
         color: rgb(237, 43, 52);
@@ -462,4 +460,154 @@ button {
     justify-content: flex-start;
     word-wrap: break-word;
     max-height: calc(var(--WRAPPER_HEIGHT)*(2.3 / 3)*(2.77 / 3));
+}
+
+.hide {
+    display: none !important;
+}
+
+.loading {
+    animation-name: loadingButtonT;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+    --pos:10%;
+    background: #53E237;
+    background: -moz-linear-gradient(left, #53E237 0%, #219293 var(--pos), #53E237 100%);
+    background: -webkit-linear-gradient(left, #53E237 0%, #219293 var(--pos), #53E237 100%);
+    background: linear-gradient(to right, #53E237 0%, #219293 var(--pos), #53E237 100%);
+
+}
+@keyframes loadingButtonT {
+	0% { --pos:0%; }
+	1% { --pos:1%; }
+	2% { --pos:2%; }
+	3% { --pos:3%; }
+	4% { --pos:4%; }
+	5% { --pos:5%; }
+	6% { --pos:6%; }
+	7% { --pos:7%; }
+	8% { --pos:8%; }
+	9% { --pos:9%; }
+	10% { --pos:10%; }
+	11% { --pos:11%; }
+	12% { --pos:12%; }
+	13% { --pos:13%; }
+	14% { --pos:14%; }
+	15% { --pos:15%; }
+	16% { --pos:16%; }
+	17% { --pos:17%; }
+	18% { --pos:18%; }
+	19% { --pos:19%; }
+	20% { --pos:20%; }
+	21% { --pos:21%; }
+	22% { --pos:22%; }
+	23% { --pos:23%; }
+	24% { --pos:24%; }
+	25% { --pos:25%; }
+	26% { --pos:26%; }
+	27% { --pos:27%; }
+	28% { --pos:28%; }
+	29% { --pos:29%; }
+	30% { --pos:30%; }
+	31% { --pos:31%; }
+	32% { --pos:32%; }
+	33% { --pos:33%; }
+	34% { --pos:34%; }
+	35% { --pos:35%; }
+	36% { --pos:36%; }
+	37% { --pos:37%; }
+	38% { --pos:38%; }
+	39% { --pos:39%; }
+	40% { --pos:40%; }
+	41% { --pos:41%; }
+	42% { --pos:42%; }
+	43% { --pos:43%; }
+	44% { --pos:44%; }
+	45% { --pos:45%; }
+	46% { --pos:46%; }
+	47% { --pos:47%; }
+	48% { --pos:48%; }
+	49% { --pos:49%; }
+	50% { --pos:50%; }
+	51% { --pos:51%; }
+	52% { --pos:52%; }
+	53% { --pos:53%; }
+	54% { --pos:54%; }
+	55% { --pos:55%; }
+	56% { --pos:56%; }
+	57% { --pos:57%; }
+	58% { --pos:58%; }
+	59% { --pos:59%; }
+	60% { --pos:60%; }
+	61% { --pos:61%; }
+	62% { --pos:62%; }
+	63% { --pos:63%; }
+	64% { --pos:64%; }
+	65% { --pos:65%; }
+	66% { --pos:66%; }
+	67% { --pos:67%; }
+	68% { --pos:68%; }
+	69% { --pos:69%; }
+	70% { --pos:70%; }
+	71% { --pos:71%; }
+	72% { --pos:72%; }
+	73% { --pos:73%; }
+	74% { --pos:74%; }
+	75% { --pos:75%; }
+	76% { --pos:76%; }
+	77% { --pos:77%; }
+	78% { --pos:78%; }
+	79% { --pos:79%; }
+	80% { --pos:80%; }
+	81% { --pos:81%; }
+	82% { --pos:82%; }
+	83% { --pos:83%; }
+	84% { --pos:84%; }
+	85% { --pos:85%; }
+	86% { --pos:86%; }
+	87% { --pos:87%; }
+	88% { --pos:88%; }
+	89% { --pos:89%; }
+	90% { --pos:90%; }
+	91% { --pos:91%; }
+	92% { --pos:92%; }
+	93% { --pos:93%; }
+	94% { --pos:94%; }
+	95% { --pos:95%; }
+	96% { --pos:96%; }
+	97% { --pos:97%; }
+	98% { --pos:98%; }
+	99% { --pos:99%; }
+	100% { --pos:100%; }
+}
+
+@keyframes loadingButton {
+    0% {
+
+    }
+    1% {
+        background: #53E237;
+        background: -moz-linear-gradient(left, #53E237 0%, #219293 1%, #53E237 100%);
+        background: -webkit-linear-gradient(left, #53E237 0%, #219293 1%, #53E237 100%);
+        background: linear-gradient(to right, #53E237 0%, #219293 1%, #53E237 100%);
+    }
+    50% {
+        background: #53E237;
+        background: -moz-linear-gradient(left, #53E237 0%, #219293 50%, #53E237 100%);
+        background: -webkit-linear-gradient(left, #53E237 0%, #219293 50%, #53E237 100%);
+        background: linear-gradient(to right, #53E237 0%, #219293 50%, #53E237 100%);
+    }
+    99% {
+        background: #53E237;
+        background: -moz-linear-gradient(left, #53E237 0%, #219293 99%, #53E237 100%);
+        background: -webkit-linear-gradient(left, #53E237 0%, #219293 99%, #53E237 100%);
+        background: linear-gradient(to right, #53E237 0%, #219293 99%, #53E237 100%);
+    }
+    100% {
+        background: #53E237;
+        background: -moz-linear-gradient(left, #53E237 0%, #219293 100%, #53E237 100%);
+        background: -webkit-linear-gradient(left, #53E237 0%, #219293 100%, #53E237 100%);
+        background: linear-gradient(to right, #53E237 0%, #219293 100%, #53E237 100%);
+    }
 }
